--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -16,7 +16,8 @@
       "callToActionMode": "button",
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
-      "textAlignment": "center"
+      "textAlignment": "center",
+      "blockClass": "vintage"
     }
   },
   "info-card#button-left": {
@@ -27,7 +28,8 @@
       "textAlignment": "center",
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "callToActionMode": "link",
-      "callToActionText": "Go To Collection"
+      "callToActionText": "Go To Collection",
+      "blockClass": "metal"
     }
   }
 }
