flex-layout: corrigindo erro flex-layout.col

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -12,7 +12,7 @@
   },
   "flex-layout.col": {
     "children": [
-      "image#eletronics",
+      "image#electronics",
       "image#major-appliance"
     ]
   },
@@ -25,7 +25,7 @@
       "textPosition": "center"
     }
   },
-  "image#eletronics": {
+  "image#electronics": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
       "maxWidth": "100%"
