pdp: customizando pagina de produto

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,38 @@
 {
   "store.product": {
     "children": [
+      "flex-layout.row#main"
     ]
+  },
+  "flex-layout.row#main": {
+    "children": [
+      "flex-layout.col#left",
+      "flex-layout.col#right"
+    ],
+    "props": {
+      "marginTop": 6
+    }
+  },
+  "flex-layout.col#left": {
+    "children": [
+      "product-images"
+    ]
+  },
+  "flex-layout.col#right": {
+    "children": [
+      "product-name",
+      "product-price",
+      "buy-button"
+    ],
+    "props": {
+      "preventVerticalStretch": true,
+      "verticalAlign": "middle"
+    }
+  },
+  "product-price": {
+    "props": {
+      "showSavings": false,
+      "showListPrice": false
+    }
   }
 }
