pdp: customizando pagina de produto

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -27,12 +27,12 @@
     "props": {
       "preventVerticalStretch": true,
       "verticalAlign": "middle"
-    }
+    }  
   },
   "product-price": {
     "props": {
-      "showSavings": false,
-      "showListPrice": false
+      "showListPrice": false,
+      "showSavings": true
     }
   }
 }
