--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -5,13 +5,13 @@
     ]
   },
   "flex-layout.row#main": {
+    "props": {
+      "marginTop": 6
+    },
     "children": [
       "flex-layout.col#left",
       "flex-layout.col#right"
-    ],
-    "props": {
-      "marginTop": 6
-    }
+    ]  
   },
   "flex-layout.col#left": {
     "children": [
@@ -19,20 +19,20 @@
     ]
   },
   "flex-layout.col#right": {
+    "props": {
+      "preventVerticalStretch": true,
+      "verticalAlign": "middle"
+    }, 
     "children": [
       "product-name",
       "product-price",
       "buy-button"
-    ],
-    "props": {
-      "preventVerticalStretch": true,
-      "verticalAlign": "middle"
-    }  
+    ]  
   },
   "product-price": {
     "props": {
-      "showListPrice": false,
-      "showSavings": true
+      "showSavings": true,
+      "showListPrice": false
     }
   }
 }
