pdp: customizando pagina de produto

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,7 +1,8 @@
 {
   "store.product": {
     "children": [
-      "flex-layout.row#main"
+      "flex-layout.row#main",
+      "product-price"
     ]
   },
   "flex-layout.row#main": {
