--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,18 +1,17 @@
 {
   "store.product": {
     "children": [
-      "flex-layout.row#main",
-      "product-price"
+      "flex-layout.row#main"
     ]
   },
-  "flex-layout.row#main": {
-    "props": {
+  "flex-layout.row#main": { 
+    "props": { 
       "marginTop": 6
     },
     "children": [
       "flex-layout.col#left",
       "flex-layout.col#right"
-    ]  
+    ]
   },
   "flex-layout.col#left": {
     "children": [
@@ -23,17 +22,11 @@
     "props": {
       "preventVerticalStretch": true,
       "verticalAlign": "middle"
-    }, 
+    },
     "children": [
-      "product-name",
-      "product-price",
+      "product-name", 
+      "product-price",  
       "buy-button"
-    ]  
-  },
-  "product-price": {
-    "props": {
-      "showSavings": true,
-      "showListPrice": false
-    }
+    ]
   }
 }
