--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -29,6 +29,7 @@
       "product-price",
       "flex-layout.row#qty-sku",
       "shipping-simulator",
+      "product-identifier.product",
       "buy-button"
     ]
   },
