--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -69,7 +69,7 @@
   },
   "tab-content.item#home1": {
     "children": [
-      "rich-text##home1"
+      "rich-text#home1"
     ],
     "props": {
       "tabId": "majorAppliances"
