menuflex: customizando menus com elementos flex

--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -82,9 +82,7 @@
   "rich-text#header": {
     "props": {
       "text": "**Free Shipping on orders over $50**",
-      "textPosition": "CENTER",
-      "paddingRight": 4,
-      "horizontalAlign": "right"
+      "textPosition": "CENTER"
     }
   },
   "header-row#menu": {
