--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -19,7 +19,11 @@
     "children": [
       "image#menu",
       "rich-text#header"
-    ]
+    ],
+    "props": {
+      "paddingRight": 4,
+      "horizontalAlign": "right"
+    }
   },
   "vtex.menu@2.x:menu#major": {
     "children": [
